--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SET</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Age Calculator</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="calculate">
+
+        <h1>JavaScript</h1>
+        <h1>Age Calculator</h1>
+        <div class="input-box">
+          <input type="date" id="date">
+          <button onclick="calculateage()">Calculate</button>
+        </div>
+        <p id="result"></p>
+        <div>
+    </div>
+   <script src="index.js"></script>
+
+  </body>
 </html>
