--- a/index.html
+++ b/index.html
@@ -3,23 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Age Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Color-GeneratorO_O</title>
+   <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="calculate">
-
-        <h1>JavaScript</h1>
-        <h1>Age Calculator</h1>
-        <div class="input-box">
-          <input type="date" id="date">
-          <button onclick="calculateage()">Calculate</button>
-        </div>
-        <p id="result"></p>
-        <div>
+    <div class="main text-center ">
+      <div class="container text-center">
+        <p id="color-code">#fff</p>
+        <button id="btn">Generate</button>
+      </div>
     </div>
-   <script src="index.js"></script>
-
+    <script src="./script.js"></script>
   </body>
 </html>
